add: supabaseの接続先をローカルに設定（dotnet user-secrets setを使用）

--- a/src/SenLink.Api/SenLink.Api.csproj
+++ b/src/SenLink.Api/SenLink.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8c2f3fc5-091d-4714-badd-56e15ab0acb7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
