chore: マイグレーションのライブラリを追加(#9)

--- a/src/SenLink.Infrastructure/SenLink.Infrastructure.csproj
+++ b/src/SenLink.Infrastructure/SenLink.Infrastructure.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\SenLink.Shared\SenLink.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
