--- a/src/SenLink.Api/SenLink.Api.csproj
+++ b/src/SenLink.Api/SenLink.Api.csproj
@@ -9,12 +9,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.*">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SenLink.Service\SenLink.Service.csproj" />
     <ProjectReference Include="..\SenLink.Infrastructure\SenLink.Infrastructure.csproj" />
+    <ProjectReference Include="..\SenLink.Domain\SenLink.Domain.csproj" />
   </ItemGroup>
 
 </Project>
